11 May 2006: Wouter
	- nsd.conf.sample shows defaults for ip4-only, ip6-only and debug-mode.
10 May 2006: Wouter
	- nsdc.sh is set +x after creation.
	- improved error message when zone in db has no config info.
	- support for broken nsec3 chains (if the one with the SOA bit
	  is complete, it is OK for there to be other nsec3 chains 
	  with different parameters in the zone).

9 May 2006: Wouter
	- Fix for finding bad zone when populating SOA info on start.
	 it would find a parent zone instead of the zone in question (
	 which is empty).
	- request-xfr: AXFR 10.0.0.153 keytouse syntax to interoperate
	  with NSD machines. Will only send AXFR queries to the machine.
	- documented AXFR option in nsd.conf.5 manual page,
	  and updated nsd-checkconf, nsd.conf.sample.
	- made 'skipping zone' log entry clearer (Sam Weiler asked).

8 May 2006: Wouter
	- updated zparser.y to handle empty nsec_seq lists.
	  for empty nonterminals in NSEC3.
	- nicer without ambiguous grammer.

5 May 2006: Wouter
	- nsd-notify handles option -y key:secret to TSIG sign outgoing
	  queries.
	- the acl checks now verify TSIG signatures on the query.
	- iterated_hash compiles with ssl disabled.
	- new ipc NSD_ZONE_STATE sent by xfrd to nsd process. notifies
	  nsd of the state (ok or expired) of a zone.
	- reload process waits for the old server_main to exit to make
	  sure there is no race condition listening to the NSD_ZONE_STATE
	  messages generated when reload sends SOA_INFO to xfrd.
	- server_main and children all set zone_ok state in config options.
	  also server_main so that newly forked children get the right state.
	- if a secondary zone is expired, NSD returns SERVFAIL.
	  a transient error, so resolvers try again later.
	- SOA_END ipc message, sent by reload to xfrd, so it can repeat
	  all zone states (which can have changed during reload).
	- zone_is_ok kept in config section so that state for zones
	  without data is not lost. Those have no zone_type*.