@@ -1,5 +1,9 @@
 11 May 2006: Wouter
 	- nsd.conf.sample shows defaults for ip4-only, ip6-only and debug-mode.
+	- SOA_BEGIN message on start of reload sending soa info so that
+	  xfrd will not reply with expire-notifications and thus deadlock
+	  both on blocking writes (and no OS buffer on the pipes).
+
 10 May 2006: Wouter
 	- nsdc.sh is set +x after creation.
 	- improved error message when zone in db has no config info.
